# portfolio

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json
content/: site.toml
migrations/: 001_create_tables.sql  002_add_views.sql
src/: main.rs
src/admin/: api.rs  auth.rs  db.rs  handlers.rs  middleware.rs  mod.rs  models.rs  server.rs
src/components/: back_to_top.rs  blog_card.rs  footer.rs  hero.rs  icons.rs  mod.rs  navbar.rs  project_card.rs  skills.rs  social_links.rs  timeline.rs
src/content/: projects-en.toml  projects-pl.toml  projects.toml  site-en.toml  site-pl.toml  site.toml
src/models/: mod.rs  post.rs  project.rs  site_config.rs
src/templates/: blog_index.rs  blog_post.rs  error_views.rs  index.rs  mod.rs  projects.rs
static/css/: main.css  styles.css
style/: main.css
translations/: en.ftl  pl.ftl
