[package]
name = "portfolio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Dependencies for the engine and the browser go here
[dependencies]
perseus = { version = "=0.4.2", features = [ "hydrate", "translator-fluent" ] }
sycamore = "^0.8.1"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
toml = "0.9.8"
pulldown-cmark = "0.13.0"

# Engine-only dependencies go here
[target.'cfg(engine)'.dependencies]
tokio = { version = "1", features = [ "macros", "rt", "rt-multi-thread" ] }
perseus-axum = { version = "=0.4.2", features = [ "dflt-server" ] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
axum = "0.6"
axum-extra = { version = "0.7", features = ["cookie"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["fs", "compression-gzip"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
html-escape = "0.2"
dotenv = "0.15"
time = "0.3"
once_cell = "1.19"
tracing = "0.1"

# Browser-only dependencies go here
[target.'cfg(client)'.dependencies]
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console", "Window", "Location"] }
wasm-bindgen = "0.2"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(engine)', 'cfg(client)'] }
